# FIAP_MLE10_TC1

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.streamlit  LICENSE  Makefile  NOTICE.md  README.md  cloudbuild.streamlit.yaml  pyproject.toml  requirements-api.txt  requirements-app.txt
app/: streamlit_app.py
docs/: Apresentacao_Tech_Challenge_1_MLE10_Churn.pptx  deployment_architecture.md  ml_canvas.md  model_card.md  monitoring_plan.md
models/: model_metadata.json
notebooks/: 01_eda_baselines.ipynb  02_mlp_model_comparison.ipynb
scripts/: deploy_streamlit_to_cloud_run.sh  generate_eda_notebook.py  generate_mlp_notebook.py  upload_model_to_gcs.sh
src/churn_prediction/: api.py  business_cost.py  config.py  data.py  inference.py  logging_config.py  metrics.py  mlp_model.py  model_registry.py  pipeline.py  schemas.py  train.py
tests/: conftest.py  test_api.py  test_model_registry.py  test_schema.py  test_smoke.py  test_streamlit_app.py
