[project]
name = "churn-prediction"
version = "0.1.0"
description = "Rede neural (MLP) para previsão de churn de clientes de telecomunicações, com pipeline profissional end-to-end (PyTorch, Scikit-Learn, MLflow, FastAPI)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Grupo FIAP MLE10 - Tech Challenge 1" }
]

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "mlflow>=2.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pandera>=0.19",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# ===================== Ruff (lint + format) =====================
[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["notebooks", "mlruns", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle erros
    "W",   # pycodestyle avisos
    "F",   # pyflakes
    "I",   # isort (ordenação de imports)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # linha longa (controlado pelo line-length, mas evita falso-positivo em strings)
]

[tool.ruff.lint.isort]
known-first-party = ["churn_prediction"]

# ===================== Pytest =====================
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src/churn_prediction --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/churn_prediction"]
omit = ["*/tests/*"]
